[package]
name = "bluez"
version = "0.1.2"
authors = ["Ibiyemi Abiodun <ibiyemi@intulon.com>"]
edition = "2018"
repository = "https://github.com/laptou/bluez-rs"
readme = "README.md"
description = "Control Bluetooth on Linux."
license = "MIT"
keywords = ["bluetooth", "bluez", "linux"]
exclude = ["example/*"]

[dependencies]
libc = "0.2"
thiserror = "1.0"
num-traits = "0.2"
num-derive = "0.3"
enumflags2 = "0.6"
bytes = "0.5"
bitvec = "0.16"
futures = "0.3"
async-std = { version = "1.4", features = ["attributes"] }

[[bin]]
name = "discover"
path = "src/example/discover.rs"
doc = false

[[bin]]
name = "list"
path = "src/example/list.rs"
doc = false

