[package]
name = "bluez"
version = "0.3.0"
authors = ["Ibiyemi Abiodun <ibiyemi@intulon.com>"]
edition = "2018"
repository = "https://github.com/laptou/bluez-rs"
readme = "README.md"
description = "Control Bluetooth on Linux."
license = "MIT"
keywords = ["bluetooth", "bluez", "linux"]
exclude = ["example/*"]

[dependencies]
libc = "0.2"
thiserror = "1.0"
num-traits = "0.2"
num-derive = "0.3"
enumflags2 = "0.6.4"
enumflags2_derive = "0.6.4"
bytes = "0.6"
bitvec = "0.19"
futures = "0.3"
smol = "1.2"

[dev-dependencies]
async-std = { version = "1.7", features = ["attributes"] }

[[example]]
name = "discover"

[[example]]
name = "list"

